<resources>
    <string name="app_name">MRRA</string>

    <string name="health">Health</string>
    <string name="connection">Connection</string>
    <string name="mrra">MRRA</string>
    <string name="product">Product</string>
    <string name="me">Me</string>

    <string name="bluetooth">Bluetooth</string>
    <string name="scanning">Scanning</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_turning_on">Turning ON</string>
    <string name="status_on">ON</string>
    <string name="status_turning_off">Turning OFF</string>
    <string name="status_off">OFF</string>
    <string name="status_error">Error</string>

    <string name="product_introduction_tip">Click hear to view the video</string>
    <string name="product_introduction_title_0">Free</string>
    <string name="product_introduction_title_1">Realtime</string>
    <string name="product_introduction_title_2">Light</string>
    <string name="product_introduction_title_3">Comfortable</string>
    <string name="product_introduction_0">The robotic arm stores three training modes.People choose one according to the needs . It also provided customized training programs. Users can select training mode, view training records and training reports through the APP.</string>
    <string name="product_introduction_1">Paramedics monitored the training data of multiple patients remotely in real time.</string>
    <string name="product_introduction_2">Unlike the heavy, bulky traditional mechanical arm, we choose carbon fiber, ABS and other materials to achieve lightweight and nice strength. In addition, the material touched with the human body feels comfortable.</string>
    <string name="product_introduction_3">We use sliding mode impedance control/ based on improved reaching law, to achieve fast and stable trajectory. Structure design is more ergonomic.</string>
    <string name="product_support_staff">Service</string>
    <string name="product_shopping_bag">Bag</string>
    <string name="product_contact_customer_service_to_purchase">Contact customer service to</string>
    <string name="product_product_Introduction">Product Introduction</string>
    <string name="product_about_us">About Us</string>
    <string name="product_buy">Buy</string>
    <string name="product_product_detail">Product Detail</string>
    <string name="product_inventory">Inventory</string>
    <string name="product_deliver_goods">Deliver Goods</string>
    <string name="product_deliver_goods1">Delivery within 48 hours after payment</string>
    <string name="product_money_sign">¥</string>
    <string name="product_price">17000</string>
    <string name="product_virtual_price">¥18888</string>
    <string name="product_introduction_service">Free home installation services</string>
    <string name="product_introduction_service1">One year free warranty</string>
    <string name="product_name">MRRA intelligent upper limb rehabilitation robotic arm</string>
    <string name="product_introduction">Upper wrist rehabilitation training  Multiple training modes  Multi-scenario use</string>
    <string name="product_sold">Ninety-nine pieces have been sold</string>
    <string name="product_share">Share</string>

    <string name="mrra_control">Control C.</string>
    <string name="mrra_introduction">Product Introduction</string>
    <string name="mrra_contact_us">Contact Us</string>
    <string name="mrra_control_bluetooth">Bluetooth</string>
    <string name="mrra_control_click_to_connect">Click hear to connect</string>
    <string name="mrra_control_mac_address">MAC Address</string>
    <string name="mrra_control_device_name">Device Name</string>
    <string name="mrra_control_connect_status">Status</string>
    <string name="mrra_control_mode">Mode</string>
    <string name="mrra_control_not_connected">Not Connected</string>
    <string name="mrra_control_connecting">Connecting</string>
    <string name="mrra_control_verifying">Verifying</string>
    <string name="mrra_control_connect_error">Connect Error</string>
    <string name="mrra_control_verification_failed">Verification failed</string>
    <string name="mrra_control_angle_0_text">Angles of elbow joints</string>
    <string name="mrra_control_angle_1_text">Angles of shoulder flexion and extension</string>
    <string name="mrra_control_angle_2_text">Angles of shoulder joint horizontal abduction and adduction</string>
    <string name="mrra_control_mode_passive">Passive</string>
    <string name="mrra_control_mode_initiative">Initiative</string>
    <string name="mrra_control_mode_memory">Memory</string>
    <string name="mrra_control_mode_reappearance">Reappearance</string>
    <string name="mrra_control_mode_stop">Stop</string>
    <string name="mrra_control_please_stop_memory">Please Stop Memory First</string>
    <string name="mrra_control_not_memory">Not In Memory</string>
    <string name="mrra_control_reappearance_empty">Please Remember First</string>
    <string name="mrra_connect_status_success">Success</string>
    <string name="mrra_control_passive_mode_select">Selected</string>
    <string name="mrra_control_passive_mode_select_first">Please Selected Mode First</string>
    <string name="mrra_control_mode_send">Send</string>
    <string name="mrra_control_mode_memory_start">Start To Remember</string>
    <string name="mrra_control_mode_memory_stop">Stop Memory</string>
    <string name="mrra_control_please_stop">Please Stop First</string>
    <string name="mrra_control_write_success">Input Success</string>
    <string name="mrra_control_write_fail">Input failed</string>
    <string name="mrra_introduction_tip">Click hear to view the video</string>
    <string name="mrra_introduction_title_0">Free</string>
    <string name="mrra_introduction_title_1">Realtime</string>
    <string name="mrra_introduction_title_2">Light</string>
    <string name="mrra_introduction_title_3">Comfortable</string>
    <string name="mrra_introduction_0">The robotic arm stores three training modes.People choose one according to the needs . It also provided customized training programs. Users can select training mode, view training records and training reports through the APP.</string>
    <string name="mrra_introduction_1">Paramedics monitored the training data of multiple patients remotely in real time.</string>
    <string name="mrra_introduction_2">Unlike the heavy, bulky traditional mechanical arm, we choose carbon fiber, ABS and other materials to achieve lightweight and nice strength. In addition, the material touched with the human body feels comfortable.</string>
    <string name="mrra_introduction_3">We use sliding mode impedance control/ based on improved reaching law, to achieve fast and stable trajectory. Structure design is more ergonomic.</string>
    <string name="mrra_contact_text">MRRA team was founded in Guangdong University of Technology.\nOur team comes from mechanical and electrical, computer, materials and energy, art and design, management, foreign languages institutes. There are 11 students with different professional knowledge to develop this program together, including C, C++, OpenCV developers, and the mechanical structure design and embedded personnel. We are professional in various fields.\n\nContact us: GUANGDONG University of Technology MRRA team\nProject Leader: Dong Eryi\nContact: 18177413701\nAddress: No. 100, Huanxi Road, Guangzhou University, Xiaoguwei Street, Panyu District, Guangzhou city, Guangdong Province</string>

    <string name="mrra_not_connected_des">No device is connected, please go to the "Connection" module to connect.</string>
    <string name="permission_des">The application cannot be used without Bluetooth or location permission.</string>

    <string name="me_settings">Settings</string>
    <string name="me_user">MRRA User</string>

    <string name="settings_follow_system">Follow System</string>
    <string name="settings_lang">Language</string>
    <string name="settings_en">English</string>
    <string name="settings_cn">简体中文</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_dark_mode_dark">Always Dark Mode</string>
    <string name="settings_dark_mode_light">Always Light Mode</string>
    <string name="settings_click_to_save">Save</string>
    <string name="setting_save_msg">Save Settings？</string>
    <string name="setting_save_ok">OK</string>
    <string name="setting_save_cancel">Cancel</string>


    <string name="team_introduction_0">The "MRRA" team was founded in Guangdong University of Technology</string>
    <string name="team_introduction_1">This project is jointly developed by 11 students with different professional knowledge from the School of Mechanical and Electrical Engineering, Computer science, information technology, materials and Energy, Art and design, management and Foreign languages, including C language, C++, OpenCV developers, mechanical structure design and embedded personnel, etc. The team members are of high professional quality and have in-depth research in related fields</string>
    <string name="team_introduction_2">Contact us: Guangdong University of Technology MRRA team</string>
    <string name="team_introduction_3">Team Project Leader:Eryi Dong</string>
    <string name="team_introduction_4">Contact :18177413701</string>
    <string name="team_introduction_5">Address: No. 100, Huanxi Road, Guangzhou University, Xiaoguwei Street, Panyu District, Guangzhou City, Guangdong Province</string>

    <string name="health_title">Health</string>
    <string name="health_training_record">Training record</string>
    <string name="health_training_commend">Training commend</string>

    <string name="consult_toolbar_1">① Describe your situation</string>
    <string name="consult_toolbar_2">② Enter a conversation</string>
    <string name="consult_toolbar_3"> ----- </string>
    <string name="consult_hini">Describe the condition in as much detail as possible in order to get help from your doctor</string>
    <string name="consult_tv1">Upload examination report or photos of affected area</string>
    <string name="consult_tv2">The photo is visible only to himself and his doctor</string>
    <string name="consult_contract1">Click Consult now to agree</string>
    <string name="consult_contract2">《Case Privacy Agreement》</string>
    <string name="consult_contract3">，Signed by the family members</string>
    <string name="consult_bt">Immediate Consultation</string>

    <string name="consult_chat_toolbar1">Online consultation</string>
    <string name="consult_chat_toolbar2">You can ask questions to the doctor as many times as you like before the consultation period ends</string>
    <string name="consult_chat_bt">send</string>
</resources>