<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.SettingsActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/settings_lang"
            android:textColor="?attr/titleTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardBackgroundColor="@color/gray_transparent_40"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_settings_lang_cn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_gray_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/settings_cn"
                    android:textAllCaps="false"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_settings_lang_cn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_selected"
                    android:visibility="gone" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardBackgroundColor="@color/gray_transparent_40"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_settings_lang_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_gray_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/settings_en"
                    android:textAllCaps="false"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_settings_lang_en"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_selected"
                    android:visibility="gone" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardBackgroundColor="@color/gray_transparent_40"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_settings_lang_follow_system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_gray_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/settings_follow_system"
                    android:textAllCaps="false"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_settings_lang_follow_system"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_selected" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/settings_dark_mode"
            android:textColor="?attr/titleTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardBackgroundColor="@color/gray_transparent_40"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_settings_mode_dark_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_gray_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/settings_dark_mode_dark"
                    android:textAllCaps="false"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_settings_mode_dark_mode"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_selected"
                    android:visibility="gone" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardBackgroundColor="@color/gray_transparent_40"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_settings_mode_light_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_gray_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/settings_dark_mode_light"
                    android:textAllCaps="false"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_settings_mode_light_mode"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_selected"
                    android:visibility="gone" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardBackgroundColor="@color/gray_transparent_40"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_settings_mode_follow_system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_gray_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/settings_follow_system"
                    android:textAllCaps="false"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_settings_mode_follow_system"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_selected" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>